Fixed issue with IE browsers. The polyfill is now brought into the base.html that is used for all pages, therefore all pages will work on IE 11. Fixed display of radio buttons on the metrics pages.

--- a/assets/styles/metrics/metrics_custom.scss
+++ b/assets/styles/metrics/metrics_custom.scss
@@ -27,6 +27,10 @@ $icon-font-path: "./fonts/";
             @include make-md-column(6);
         }
     }
-
-
+}
+.chart-display-select-div {
+    display: inline-block;
+    div {
+        display: inline-block;
+    }
 }
